--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,26 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
-      # specify the version
       - image: circleci/golang:1.9
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
     working_directory: /go/src/github.com/roselmamendes/o-q-le-agora
     steps:
       - checkout
+      - run:
+          name: Instala dependencias
+          command: go get -v -t -d ./...
+  tests:
+    working_directory: /go/src/github.com/roselmamendes/o-q-le-agora
+    steps:
+      - run:
+          name: Executa testes
+          command: go test
 
-      # specify any bash command here prefixed with `run: `
-      - run: go get -v -t -d ./...
-      # - run: go test -v ./...
+workflows:
+ version: 2
+ build_test:
+   jobs:
+     - build
+     - tests:
+         requires:
+           - build
