--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,5 @@
 version: 2
 jobs:
-          command: go get -v -t -d ./...
   tests:
     docker:
       - image: circleci/golang:1.9
@@ -18,7 +17,4 @@ workflows:
  version: 2
  build_test:
    jobs:
-     - build
-     - tests:
-         requires:
-           - build
+     - tests
