--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   web:
     container_name: o-q-le-agora
     build: .
+    environment:
+      - CONNECTIONSTRING=mongodb://db:27017
     ports:
      - "4000:4000"
     volumes:
